front: fix scenario name overlaps

--- a/front/src/modules/scenario/styles/_scenarioExplorer.scss
+++ b/front/src/modules/scenario/styles/_scenarioExplorer.scss
@@ -83,6 +83,7 @@
           justify-content: space-between;
           font-size: 1rem;
           background-color: var(--secondary);
+          overflow: hidden;
           .scenario-explorator-card-head-scenario-traincount {
             display: flex;
             align-items: center;
